--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -22,6 +22,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@nuxt/image": "^1.7.0",
     "@pinia/nuxt": "^0.5.1",
     "sass": "^1.71.1"
   }
