--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -10,12 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@editorjs/editorjs": "^2.29.0",
     "@nuxt/ui": "^2.14.0",
     "luxon": "^3.4.4",
     "mitt": "^3.0.1",
     "mongoose": "^8.2.0",
     "nuxt": "^3.10.3",
+    "nuxt-tiptap-editor": "^1.1.2",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0",
     "vuedraggable": "^4.1.0",
